@@ -79,6 +79,9 @@ this option.
 Do not read any configuration files.  This can only be used as the
 first option given on the command-line.
 .TP
+.B \-d
+Do not run dpkg-checkbuilddeps to check build dependencies.
+.TP
 .B \-\-help
 Display a help message and exit successfully.
 .TP
