@@ -10,8 +10,10 @@ devscripts (2.10.3) UNRELEASED; urgency=low
   * bts: add an --cc-addr to allow sending carbon copies of emails sent
     to control@bugs.debian.org. (Closes: #333371)
   * debchange: drop NMU revision when doing a QA upload. (Closes: #415995)
+  * debclean: add a -d option to skip build dependencies check.
+    (Closes: #370066)
 
- -- Mohammed Adnène Trojette <adn+deb@diwi.org>  Sun, 01 Apr 2007 16:57:14 +0200
+ -- Mohammed Adnène Trojette <adn+deb@diwi.org>  Sun, 01 Apr 2007 20:22:39 +0200
 
 devscripts (2.10.2) unstable; urgency=low
 
